# http-client-protocol

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/http_client_protocol/: __init__.py
src/http_client_protocol/backends/: __init__.py
src/http_client_protocol/backends/dataclasses/: __init__.py  _client.py
src/http_client_protocol/backends/httpx/: __init__.py  _client.py
src/http_client_protocol/backends/urllib/: __init__.py  _client.py
src/http_client_protocol/interface/: __init__.py  _http.py
tests/: conftest.py  test_backends.py
