[project]
name = "http-client-protocol"
version = "0.1.0"
description = "Python HTTP Client API Specification"
readme = "README.md"
authors = [
    { name = "MtkN1", email = "51289448+MtkN1@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
ci = [
    "pytest-github-actions-annotate-failures>=0.3.0",
]
coverage = [
    "coverage[toml]>=7.8.2",
]
dev = [
    {include-group = "coverage"},
    {include-group = "ide"},
    {include-group = "lint"},
    {include-group = "test"},
]
ide = [
    "pytest-cov>=6.1.1",
]
lint = [
    "ruff>=0.11.13",
]
test = [
    "aiohttp>=3.12.12",
    "anyio>=4.9.0",
    "pytest>=8.4.0",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
fail_under = 100
show_missing = true
skip_empty = true

[tool.coverage.html]
skip_empty = true

[tool.pyright]
autoSearchPaths = false
extraPaths = []
include = ["src", "tests"]
reportShadowedImports = "warning"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # https://docs.astral.sh/ruff/linter/#rule-selection
    "D203",
    "D213",
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D101", # https://docs.astral.sh/ruff/rules/undocumented-public-class/
    "D102", # https://docs.astral.sh/ruff/rules/undocumented-public-method/
    "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D105", # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "D106", # https://docs.astral.sh/ruff/rules/undocumented-public-nested-class/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
    "PLR2004", # https://docs.astral.sh/ruff/rules/magic-value-comparison/
    "S101", # https://docs.astral.sh/ruff/rules/assert/
]
